<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp"
    android:gravity="center_vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:text="@string/playlist"
    android:textColor="@color/white"
    android:textSize="22sp"/>

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:textColor="@color/icon"
            android:textFontWeight="1"
            android:textSize="22sp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/icon"
            />

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:textColor="@color/icon"
            android:textFontWeight="1"
            android:textSize="22sp"
            app:icon="@drawable/mediateka"
            app:iconGravity="textStart"
            app:iconTint="@color/icon" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:textColor="@color/icon"
            android:textFontWeight="1"
            android:textSize="22sp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/icon" />


    </LinearLayout>

</LinearLayout>


